--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "firebase-admin": "^13.6.0",
     "mongodb": "^6.3.0",
     "mongoose": "^9.0.0",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
