--- a/server/config.env.example
+++ b/server/config.env.example
@@ -14,10 +14,13 @@ FRONTEND_URL=http://localhost:5173
 NODE_ENV=development
 
 # Firebase Admin SDK
-# Option 1: Service account JSON as string (recommended)
-# FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"..."}
+# REQUIRED for production (e.g., Render): Service account JSON as string
+# Paste the entire JSON content from Firebase Console as a single-line string
+# In Render, set this as an environment variable (newlines will be escaped automatically)
+# FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}
 
-# Option 2: Path to service account JSON file
+# Optional for local development only: Path to service account JSON file
+# This method does NOT work in production environments like Render
 # FIREBASE_SERVICE_ACCOUNT_PATH=./path/to/serviceAccountKey.json
 
 # Agent Tools Secret (for ElevenLabs agent tool authentication)
