--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
+    "build": "echo 'No build step required - using tsx to run TypeScript directly'",
     "start": "tsx --env-file=config.env src/server.ts",
     "dev": "nodemon --env-file=config.env --exec tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,11 +31,11 @@
     "mongoose": "^9.0.0",
     "openai": "^6.10.0",
     "stripe": "^17.7.0",
+    "tsx": "^4.7.0",
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   }
 }
