--- a/server/.gitignore
+++ b/server/.gitignore
@@ -3,6 +3,13 @@ node_modules/
 
 # Environment variables
 config.env
+*.env
+.env.local
+
+# Firebase service account keys (never commit these!)
+*-firebase-adminsdk-*.json
+firebase-adminsdk-*.json
+serviceAccountKey.json
 
 # Logs
 logs
