--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "echo 'No build step required - using tsx to run TypeScript directly'",
-    "start": "tsx src/server.ts",
+    "start": "tsx --env-file=config.env src/server.ts",
     "dev": "nodemon --env-file=config.env --exec tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
