--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "zod": "^3.23.0",
     "@anthropic-ai/sdk": "^0.24.0",
     "@google/generative-ai": "^0.21.0",
     "@langchain/anthropic": "^0.2.0",
